virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-app
spec:
  hosts:
  - "example.com"
  gateways:
  - sample-app-gateway
  http:
  - route:
    - destination:
        host: sample-app
        port:
          number: 80
